# foundation-model-eval-harness

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
configs/: default.yaml
configs/experiments/: ablation_prompts.yaml  baseline_models.yaml  rag_baseline.yaml  smoke_ci.yaml
docker/: Dockerfile
scripts/: prepare_space_assets.py  push_space_assets.py
space_assets/runs/baseline_models/: config_resolved.yaml  preds.jsonl  report.html  report.md  results.duckdb
space_assets/runs/rag_baseline/: config_resolved.yaml  preds.jsonl  report.html  report.md  results.duckdb
space_assets/runs/smoke_ci/: config_resolved.yaml  preds.jsonl  report.html  report.md  results.duckdb
src/fmeh/: __init__.py  cli.py  config.py
src/fmeh/data/: build_datasets.py  schemas.py
src/fmeh/eval/: judge.py  metrics.py  validators.py
src/fmeh/export/: __init__.py  powerbi_export.py
src/fmeh/graph/: build_graph.py  nodes.py  state.py
src/fmeh/logging/: duckdb_logger.py  mlflow_logger.py
src/fmeh/models/: hf_local.py  openai_api.py  registry.py
src/fmeh/prompts/: templates.py
src/fmeh/prompts/versions/: v1.yaml  v2.yaml
src/fmeh/rag/: index.py  retriever.py
src/fmeh/reporting/: make_report.py  plots.py
src/fmeh/ui/: __init__.py  data.py
tests/: test_dashboard_aggregation.py  test_graph_smoke.py  test_metrics.py  test_parsing.py  test_powerbi_export.py
